--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,20 @@
     <distributionManagement>
     </distributionManagement>
     <repositories>
+        <repository>
+            <id>ml4j-releases</id>
+            <url>https://raw.githubusercontent.com/ml4j/mvn-repository/master/releases</url>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+        </repository>
+        <repository>
+            <id>ml4j-snapshots</id>
+            <url>https://raw.githubusercontent.com/ml4j/mvn-repository/master/snapshots</url>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+        </repository>
     </repositories>
     <dependencies>
         <dependency>
